# stream-recorder

./: .gitignore  README.md  pyproject.toml  流收录程序-仅移动版.spec  流收录程序-布局修正版.spec  流收录程序-时长地址修正版.spec  流收录程序-更新版.spec  流收录程序-验证版.spec  流收录程序.spec
docs/superpowers/plans/: 2026-07-15-stream-recorder-output-format.md  2026-07-15-stream-recorder.md  2026-07-16-task-duration-address-and-hidden-console.md  2026-07-16-task-table-alignment.md
docs/superpowers/sdd/: final-fix-brief.md  final-fix-report.md  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md
docs/superpowers/specs/: 2026-07-15-stream-recorder-design.md  2026-07-15-stream-recorder-output-format-design.md  2026-07-16-pts-jump-detection-design.md  2026-07-16-task-duration-address-and-hidden-console-design.md  2026-07-16-task-table-alignment-design.md
scripts/: build.ps1  fetch_ffmpeg.ps1
src/: launcher.py
src/stream_recorder/: __init__.py  duration.py  event_logger.py  events.py  ffmpeg_tools.py  main.py  models.py  recorder.py  resources.py  service.py  subprocess_options.py  task_controller.py  urls.py
src/stream_recorder/ui/: __init__.py  main_window.py
tests/: test_duration.py  test_entrypoint.py  test_events.py  test_ffmpeg_tools.py  test_recorder.py  test_resources.py  test_service.py  test_subprocess_options.py  test_task_table_layout.py  test_ui.py  test_urls.py
tests/integration/: test_hls_output.py
